[package]
name = "covid"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"] }
csv = "^1.1"
chrono = { version = "^0.4", features = ["serde"] }
reqwest = { version = "^0.11", features = ["blocking", "default-tls"], default-features = false }
smartstring = { version = "^0.2" }
enum-map = { version = "^0.6" }
log = { version = "^0.4" }
base64 = { version = "^0.13" }
bytes = { version = "^1" }
flate2 = { version = "^1" }
